--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,13 @@
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
-body {
-  background-color: #55ACEE;
-  text-align: center;
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
-}
+body { background-color: #55ACEE; text-align: center; color: #fff; font-family: 'Roboto', sans-serif; }
 
-h1 {
-  font-size: 42px;
-  margin-bottom: 150px;
-  margin-top: 50px;
-}
+h1 { font-size: 42px; margin-bottom: 150px; margin-top: 50px; }
 
-.box {
-  font-size: 24px;
-}
+.box { font-size: 24px; }
 
-.author {
-  margin-bottom: 130px;
-}
+.author { margin-bottom: 130px; }
 
-.trigger {
-  background-color: #55ACEE;
-  color: #fff;
-  font-size: 20px;
-  width: 400px;
-  height: 50px;
-  border-color: #fff;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  cursor: pointer;
-}
+.trigger { background-color: #55ACEE; color: #fff; font-size: 20px; width: 400px; height: 50px; border-color: #fff; display: block; margin: 0 auto; margin-bottom: 50px; cursor: pointer; }
 
-.tweet {
-  text-decoration: none;
-  color: #fff;
-  padding: 12px 162px;
-  border: 1px solid #fff;
-  font-size: 20px;
-}
-/*# sourceMappingURL=style.css.map */
+.tweet { text-decoration: none; color: #fff; padding: 12px 162px; border: 1px solid #fff; font-size: 20px; }
