--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,3 +42,31 @@ h1 {
     border: 1px solid #fff;
     font-size: 20px;
 }
+
+@media(max-width: 767px) {
+    body {
+        margin: 15px;
+    }
+    h1 {
+        font-size: 32px;
+        margin-bottom: 70px;
+        margin-top: 60px;
+    }
+    .box {
+        font-size: 20px;
+        margin-bottom: 40px;
+    }
+    .author {
+        margin-bottom: 70px;
+    }
+    .trigger {
+        width: 200px;
+        height: 50px;
+        margin-bottom: 30px;
+        
+    }
+    .tweet {
+        padding: 12px 60px;
+        //margin-bottom: 20px;
+    }
+}
